# tap-coingecko

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
tap_coingecko/: logging.yaml  streams.py  tap.py
tap_coingecko/streams/: __init__.py  asset_profile.py  base.py  categories.py  coins_list.py  discovery.py  factory.py  hourly.py  market_intelligence.py  utils.py
tap_coingecko/tests/: test_core.py
