[tool.poetry]
name = "tap-coingecko"
version = "0.0.1"
description = "`tap-coingecko` is a Singer tap for Coingecko, built with the Meltano SDK for Singer Taps."
authors = ["Pablo Seibelt"]
keywords = [
    "ELT",
    "Coingecko",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.3"
singer-sdk = "^0.43.1"
pendulum = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
tox = "^4.23.2"
flake8 = "^3.9.2"
black = "^23.3.0"
pydocstyle = "^6.1.1"
mypy = ">=1.9"
types-requests = "^2.26.1"
isort = "^5.10.1"
pre-commit = "^4.0.1"

[tool.black]
line-length = 100
target-version = ['py311']
src_paths = "tap_coingecko"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_coingecko"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false # temporarily disabled since root project has errors
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
ignore_errors = false

[tool.mypy-test]
ignore_errors = true

[tools.pydocstyle]
ignore = 104

[[tool.mypy.overrides]]
module = "tap_coingecko.streams"
disable_error_code = ["override"]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-coingecko = 'tap_coingecko.tap:TapCoingecko.cli'
